tests/error/function_arg_res.gw
#function void test(int now){}
